--- a/JohnnyBotSimulator/Old/JohnnyBotsSim.ipynb
+++ b/JohnnyBotSimulator/Old/JohnnyBotsSim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "\n",
     "sys.path.append(\"JohnnyBotSimulator.\")\n",
     "\n",
-    "from JohnnyClass import JohnnyBot\n"
+    "from JohnnyBotSimulator.Old.JohnnyClass import JohnnyBot\n"
    ]
   },
   {
